# E2ER-project

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.html  evaluation_framework.md  evaluation_log.csv  iv_database.md
docs/diagrams/: data_module.md  llm_tool_loop.md  pipeline_overview.md  review_aggregation.md  specialist_dag.md  system_architecture.md
examples/e2er_v1_bitcoin_institutionalization/: main.tex  references.bib
examples/e2er_v1_nft_seasonality/: main.tex  references.bib
examples/e2er_v2_nft_seasonality/: data_description.md  limitations.md  model_spec.md  narrative_threads.md  structured_idea.md
examples/e2er_v3_haiku_smoke/: README.md  data_dictionary.json  econometric_spec.md  identification_strategy.md  literature_review.md  manifest.json  paper_draft.tex  paper_plan.md  review_aggregation.json  review_data.md  review_identification.md  review_literature.md  review_mechanism.md  review_technical.md  review_writing.md
examples/e2er_v3_haiku_smoke/replication/: README.md  (+1 more)
examples/starter_theoretical/: README.md  manifest.json
scripts/: migrate.py  quickstart.sh  setup_git.sh  vendor_htmx.sh
skills/: CONTRIBUTING_SKILLS.md
sql/: 001_papers.sql  002_llm_usage.sql  003_data_queries.sql  004_literature.sql  005_contributions.sql  006_events.sql  007_papers_error.sql  008_papers_max_cost.sql  009_papers_methodology.sql
src/: __init__.py  __main__.py  config.py  logging_config.py
src/api/: app.py
src/db/: client.py  events.py
src/modules/: security.py
src/skills/: loader.py
tests/: conftest.py  test_api.py  test_audit.py  test_costs.py  test_github.py  test_guardrails.py  test_methodology.py  test_pipeline.py  test_pipeline_resilience.py  test_regressions.py  test_review_aggregator.py  test_security_review_fixes.py
tests/e2e/: smoke_test.sh  test_haiku_smoke.py
workspaces/04d9e9e4-b4aa-411f-b1ab-a9a2dfe608cb/: manifest.json
workspaces/0a2e2492-c976-4e1b-8d36-661c6ffed3a5/: manifest.json
workspaces/134962f0-49a5-48dc-9c3a-6b0953582186/: manifest.json
workspaces/1f4abecb-4c82-40c8-bfe0-ad4d4ab2ceb6/: manifest.json
workspaces/22fceeec-f634-47e1-85a1-e3ee35f0a1d0/: manifest.json
workspaces/24426226-5d3d-4399-84f8-947650a1ccb1/: manifest.json
workspaces/2779a23a-cec7-4c52-a973-3c5d679c5d96/: manifest.json
workspaces/27b3b083-1bf4-4f98-a2f3-fa890209a2e4/: manifest.json
workspaces/28eb9fa4-c8cb-4e9b-9bc2-ba742c9387ca/: manifest.json
workspaces/320d7d71-9958-4890-a6b8-b2d30210a8eb/: manifest.json
workspaces/3be1bb3c-c999-4a24-a3d7-8ceb6860904c/: manifest.json
workspaces/4e0a06ff-bf53-469a-9665-e029d8e682d1/: manifest.json
workspaces/5051d5c6-e573-4363-9157-2edf22457c24/: manifest.json
workspaces/54662270-5d3e-4e79-a0b5-d0bd702f89e6/: manifest.json
workspaces/54900333-88bc-4f6f-9b28-7c9aaff141a0/: manifest.json
workspaces/55e1b574-8b3f-4782-aafd-af2dc1edcf1b/: manifest.json
workspaces/5ae3afc0-4aaf-4100-a4f2-3ae31b8af21a/: manifest.json
workspaces/5c74d6de-45bc-45d4-9b2b-a7112bf7c1fd/: manifest.json
workspaces/5eb14c6c-2bc0-492d-b076-29f7dce4bfd7/: manifest.json
workspaces/6899efb2-2d0d-43cb-8606-a9a7c152115e/: manifest.json
workspaces/68bff845-805a-445e-8de6-91d49ad190bf/: manifest.json
workspaces/697eee27-e052-483c-aab7-fcde9e5d68d3/: manifest.json
workspaces/699b7224-ff2a-4758-837b-f21e17784581/: manifest.json
workspaces/6f69f4a0-a59f-4b64-b260-6dfbb224463d/: manifest.json
workspaces/707ece17-edbf-4f8c-b97e-1e93ed6a0ae6/: manifest.json
workspaces/760059ab-b4da-4215-9e4d-33162602e02c/: manifest.json
workspaces/7c88e77d-607d-4057-90c6-ec1b83816518/: manifest.json
(+142 files in other folders)
