[project]
name = "e2er"
version = "3.0.0"
description = "End-to-End Researcher — automated research pipeline for economics, finance, and IS"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary,pool]>=3.2.0",
    "PyGithub>=2.4.0",
    "gitpython>=3.1.0",
    "pyalex>=0.14",
    "arxiv>=2.1.0",
    "bibtexparser>=2.0.0b7",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
pgvector = [
    "pgvector>=0.3.0",
    "sentence-transformers>=3.3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]

[project.scripts]
e2er = "src.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N805", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: real-LLM end-to-end tests (skipped unless ANTHROPIC_API_KEY is set)",
]
# Skip e2e by default; run explicitly with `-m e2e`.
addopts = "-m 'not e2e'"
